chat upated
