# src/controllers/AppController.ts
@@ -1,16 +1,15 @@
-import {Route, Post, Get, Delete,SuccessResponse, Body, Controller, Response, Path} from "tsoa";
+import {Route, Post, Get, Delete, SuccessResponse, Body, Controller, Response, Path, Tags, Security} from "tsoa";
 import {App} from "../models/App";
+import {ValidateErrorJSON} from "../interface/validate_error_json.interface";
 
 interface AppCreateParams {
     name?: string
 }
 
-interface ValidateErrorJSON {
-    message: "Validation failed";
-    details: { [name: string]: unknown };
-}
 
 @Route("app")
+@Tags("app")
+@Security("jwt",['admin','user'])
 export class AppController extends Controller{
 
     @Post()
